# typst-sicons

./: .gitmodules  README.md  lib.typ  test.typ  typst.toml
src/: lib.typ
test/: test.typ
wasm/: Cargo.toml
wasm/src/: lib.rs
