[package]
name = "typst-simple-icons"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
simpleicons-rs = "15.11.0"
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }

[profile.release]
opt-level = "z"  # Optimize for size
strip = true  # Strip symbols from binary*
lto = true  # Enable link-time optimization
panic = "abort"  # Abort on panic
codegen-units = 1  # Reduce number of codegen units to increase optimizations
